raspberry-pi-os_armv8 のビルドが通った

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,7 @@ elseif(MOMO_PACKAGE_NAME STREQUAL "raspberry-pi-os_armv8")
   set(USE_SDL2 ON)
   set(BOOST_ROOT_DIR /root/boost)
   set(SDL2_ROOT_DIR /root/SDL2)
+  set(SDL2_IMAGE_ROOT_DIR /root/SDL2_image)
   set(JSON_ROOT_DIR /root/json)
   set(CLI11_ROOT_DIR /root/CLI11)
   set(WEBRTC_INCLUDE_DIR /root/webrtc/include)
