--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ if(MOMO_PACKAGE_NAME STREQUAL "windows")
   set(USE_SCREEN_CAPTURER ON)
   set(BOOST_ROOT_DIR ${_INSTALL_DIR}/boost)
   set(SDL2_ROOT_DIR ${_INSTALL_DIR}/SDL2)
+  set(SDL2_IMAGE_ROOT_DIR ${_INSTALL_DIR}/SDL2_image)
   set(JSON_ROOT_DIR ${_INSTALL_DIR}/json)
   set(CLI11_ROOT_DIR ${_INSTALL_DIR}/CLI11)
   set(WEBRTC_INCLUDE_DIR ${_INSTALL_DIR}/webrtc/include)
@@ -157,6 +158,7 @@ elseif(MOMO_PACKAGE_NAME STREQUAL "ubuntu-18.04_armv8_jetson_nano")
   set(JSON_ROOT_DIR /root/json)
   set(CLI11_ROOT_DIR /root/CLI11)
   set(SDL2_ROOT_DIR /root/SDL2)
+  set(SDL2_IMAGE_ROOT_DIR /root/SDL2_image)
   set(WEBRTC_INCLUDE_DIR /root/webrtc/include)
   set(WEBRTC_LIBRARY_DIR /root/webrtc/lib)
   set(CLANG_ROOT /root/llvm/clang)
@@ -179,6 +181,7 @@ elseif(MOMO_PACKAGE_NAME STREQUAL "ubuntu-18.04_armv8_jetson_xavier")
   set(JSON_ROOT_DIR /root/json)
   set(CLI11_ROOT_DIR /root/CLI11)
   set(SDL2_ROOT_DIR /root/SDL2)
+  set(SDL2_IMAGE_ROOT_DIR /root/SDL2_image)
   set(WEBRTC_INCLUDE_DIR /root/webrtc/include)
   set(WEBRTC_LIBRARY_DIR /root/webrtc/lib)
   set(CLANG_ROOT /root/llvm/clang)
@@ -214,6 +217,7 @@ elseif(MOMO_PACKAGE_NAME STREQUAL "ubuntu-18.04_x86_64")
   set(JSON_ROOT_DIR /root/json)
   set(CLI11_ROOT_DIR /root/CLI11)
   set(SDL2_ROOT_DIR /root/SDL2)
+  set(SDL2_IMAGE_ROOT_DIR /root/SDL2_image)
   set(WEBRTC_INCLUDE_DIR /root/webrtc/include)
   set(WEBRTC_LIBRARY_DIR /root/webrtc/lib)
 
@@ -237,6 +241,7 @@ elseif(MOMO_PACKAGE_NAME STREQUAL "ubuntu-20.04_x86_64")
   set(JSON_ROOT_DIR /root/json)
   set(CLI11_ROOT_DIR /root/CLI11)
   set(SDL2_ROOT_DIR /root/SDL2)
+  set(SDL2_IMAGE_ROOT_DIR /root/SDL2_image)
   set(WEBRTC_INCLUDE_DIR /root/webrtc/include)
   set(WEBRTC_LIBRARY_DIR /root/webrtc/lib)
 
