--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ if(MOMO_PACKAGE_NAME STREQUAL "windows")
   set(WEBRTC_LIBRARY_DIR ${_INSTALL_DIR}/webrtc/release)
 
   list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${SDL2_ROOT_DIR}/cmake)
-  list(APPEND CMAKE_PREFIX_PATH ${BOOST_ROOT_DIR} ${SDL2_ROOT_DIR})
+  list(APPEND CMAKE_PREFIX_PATH ${BOOST_ROOT_DIR} ${SDL2_ROOT_DIR} ${SDL2_IMAGE_ROOT_DIR})
 
 elseif(MOMO_PACKAGE_NAME STREQUAL "macos")
 
