--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: warrenbuckley/Setup-MSBuild@v1
       - name: Get Versions
         run: |
           Get-Content "VERSION" | Foreach-Object {
